Thymeleaf Path 추가 및 분리

--- a/Color_Memos/src/main/webapp/WEB-INF/views/leaf/th_mainPage.html
+++ b/Color_Memos/src/main/webapp/WEB-INF/views/leaf/th_mainPage.html
@@ -4,11 +4,9 @@
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
-<title>thymeleaf test</title>
+<title>Thymeleaf Main Page</title>
 </head>
 <body>
-
-<h1 th:text="${thymeleaf}"></h1>
-
+	<div>HI, This page is Thymeleaf MainPage.</div>
 </body>
 </html>
