--- a/Color_Memos/src/main/webapp/WEB-INF/views/leaf/index.html
+++ b/Color_Memos/src/main/webapp/WEB-INF/views/leaf/index.html
@@ -1,18 +1,18 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
 <!DOCTYPE html>
-<html>
+<html lang="ko"
+	xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
-<title>Color Memos</title>
+<title>thymeleaf Color Memos</title>
 <!-- css -->
-<link href="<c:url value="/resources/css/index.css"/>" rel="stylesheet">
+<link href="/resources/css/index.css" rel="stylesheet">
 <!-- jQuery -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- jQuery.validate 플러그인 삽입 -->
 <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
 <!-- js -->
-<script src="<c:url value="/resources/js/index.js"/>"></script>
+<script src="/resources/js/index.js"></script>
 </head>
 <body>
 	<div id="back">
@@ -48,7 +48,7 @@
 			<div class="right">
 				<div class="content">
 					<h2>Login</h2>
-					<form id="loginForm" method="post" action="/login">
+					<form id="loginForm" method="post" action="/th_login">
 						<div class="form-element form-stack">
 							<label for="email" class="form-label">ID</label> <input id="email" type="text" name="email">
 						</div>
