--- a/Color_Memos/src/main/webapp/resources/css/index.css
+++ b/Color_Memos/src/main/webapp/resources/css/index.css
@@ -160,3 +160,78 @@ button:focus, button:hover {
     display: none;
   }
 }
+
+.inputBox {
+   position: relative;
+   width: 20rem;
+   margin: 1rem;
+}
+
+.inputBox input {
+   width: 100%;
+   background: transparent;
+   color: black;
+   border: none;
+   outline: none;
+   box-shadow: none;
+   font-size: 1em;
+   letter-spacing: 0.1em;
+   padding: 10px 0 5px;
+   font-size: 1.2rem;
+}
+
+.inputBox span {
+   position: absolute;
+   left: 0;
+   padding: 10px 0 5px;
+   color: var(--bg-color-p500);
+   text-transform: uppercase;
+   pointer-events: none;
+   letter-spacing: 0.1em;
+   transition: 0.3s;
+   font-weight: 800;
+   font-size: 1.2rem;
+}
+
+.inputBox input:valid~span,
+.inputBox input:focus~span {
+   color: var(--bg-color-p500);
+   transform: translateY(-16px);
+   font-size: 0.85em;
+}
+
+.inputBox i {
+   position: absolute;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   height: 2px;
+   background: #fff;
+   overflow: hidden;
+}
+
+.inputBox i::before {
+   content: '';
+   position: absolute;
+   left: -100%;
+   width: 100%;
+   height: 100%;
+   background: linear-gradient(90deg, #ff1b69, #ff0, #2196f3, #9c27b0, #ff1b69);
+   animation: animate 1s linear infinite;
+   transition: 0.3s;
+}
+
+.inputBox input:valid~i::before,
+.inputBox input:focus~i::before {
+   left: 0;
+}
+
+@keyframes animate {
+   0% {
+      background-position-x: 0;
+   }
+
+   100% {
+      background-position-x: 250px;
+   }
+}
