memo 컬럼 추가(구분값) 및 리스트 수정

--- a/Color_Memos/src/main/webapp/resources/css/index.css
+++ b/Color_Memos/src/main/webapp/resources/css/index.css
@@ -182,6 +182,7 @@ button:focus, button:hover {
    letter-spacing: 0.1em;
    padding: 20px 0 5px;
    font-size: 1.2rem;
+   font-weight: 600;
 }
 
 .inputBox span {
