구분값 추가 설정 및 삭제 기능 수정

--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -12,7 +12,8 @@ body {
 }
 
 p{
-	margin: 0.5rem;
+	all: unset;
+	margin: 0.5rem !important;
 	display: table;
 }
 
@@ -110,7 +111,7 @@ p{
 	color: #333;
 }
 
-#memo_register_message{
+#memo_register_message, #memo_delete_message{
 	position: absolute;
 	padding: 5px;
 	width: 175px;
