--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -132,16 +132,18 @@ p{
 
 .memo_div{
 	border-radius: 10px;
-	border: 1px solid black;
+	border: 1px solid floralwhite;
 	display: inline-block;
 	padding: 0.5rem;
-    margin: 0.5rem;
+    margin: 0.9rem;
     transition: 0.5s ease-in-out;
     width: 16rem;
     height: 19rem;
+    background: floralwhite;
+    box-shadow: 5px 5px 10px 2px rgb(0 0 0 / 20%);
 }
 
-.memo_restore, .memo_hide{
+.memo_restore, .memo_hide, .memo_fav{
 	font-size : 0.8rem !important;
 	margin-top: 0.5rem;
 }
