--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -11,7 +11,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	background: var(--bg_color) !important;
-	line-height: 1.2 !important;
+	line-height: 1.3 !important;
 }
 
 p{
@@ -32,7 +32,7 @@ p{
     font-weight: 600;
 }
 
-#memo_register1 {
+#memo_register1, #modifyMemo {
 	width: 30%;
 	height: 30%;
 	min-height: 350px;
@@ -63,17 +63,23 @@ p{
 	background: #7163c4;
 }
 
-.memo_register-modal {
+.memo_register-modal, .memo_modify-modal {
 	max-width: 600px !important;
 }
 
-.memo_register-modal-content {
+.memo_register-modal-content, .memo_modify-modal-content {
 	border-radius: 10px !important;
     border: 1px solid #777 !important;
     width: 65% !important;
     margin: 0 auto;
     height: 380px;
     background: var(--green_color) !important;
+}
+
+.memo_register-modal-title, memo_modify-modal-title {
+	font-size: 16px;
+	font-weight: 700;
+	color: #333;
 }
 
 .memo_input {
@@ -108,12 +114,6 @@ p{
 	outline: 0;
 }
 
-.memo_register-modal-title {
-	font-size: 16px;
-	font-weight: 700;
-	color: #333;
-}
-
 .message_class{
 	position: fixed;
 	padding: 5px;
@@ -123,7 +123,7 @@ p{
 	background-color: #6449fc;
 	z-index: 2000;
 	overflow: auto;
-	top: 15%;
+	top: 10%;
 	left: 45%;
 	color: white;
 	text-align: center;
@@ -148,7 +148,8 @@ p{
 
 .memo_restore, .memo_hide, .memo_fav{
 	font-size : 0.8rem !important;
-	margin-top: 0.5rem;
+	margin-top: 0.3rem;
+    margin-right: 0.4rem;
 }
 
 .memo_content{
@@ -292,15 +293,15 @@ p{
 
 .menuToggle {
    position: relative;
-   width: 40px;
-   height: 40px;
+   width: 30px;
+   height: 30px;
    background-color: #fff;
    border-radius: 70px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
-   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.15);
+   box-shadow: 0 7px 20px rgba(0, 0, 0, 0.15);
 }
 
 .menuToggle::before {
