--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -389,3 +389,42 @@ p{
     color: #0000006b;
 }
 
+.search_wrapper {
+   display: flex;
+   flex-direction: column;
+   gap: .25rem;
+}
+
+.search_input {
+   width: 20rem;
+   height: 2rem;
+   font-size: 1rem;
+}
+
+.user-cards {
+   display: grid;
+   /* 자동 채우기 */
+   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+   gap: .25rem;
+   margin-top: 1rem;
+}
+
+.card {
+   border: 1px solid black;
+   background-color: white;
+   padding: .5rem;
+}
+
+.card>.header {
+   margin-bottom: .25rem;
+}
+
+.card>.body {
+   font-size: .8rem;
+   color: #777;
+}
+
+.hide {
+   display: none !important;
+}
+
