--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -420,3 +420,160 @@ p{
    display: none !important;
 }
 
+/* side navigation */
+.side_nav {
+   position: fixed;
+   inset: 20px;
+   background: #287bff;
+   width: 80px;
+   border-left: 10px solid #287bff;
+   border-radius: 50px;
+   overflow: hidden;
+   box-shadow: 15px 15px 25px rgba(0, 0, 0, 0.05);
+   transition: 0.5s;
+}
+
+.side_nav.active {
+   width: 200px;
+   border-radius: 20px;
+}
+
+.toggle {
+   position: absolute;
+   bottom: 15px;
+   right: 15px;
+   width: 50px;
+   height: 50px;
+   background: #fff;
+   border-radius: 50px;
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+   cursor: pointer;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.toggle::before {
+   content: '';
+   position: absolute;
+   width: 26px;
+   height: 3px;
+   border-radius: 3px;
+   background: #365fa1;
+   transform: translateY(-5px);
+   transition: 1s;
+}
+
+.toggle::after {
+   content: '';
+   position: absolute;
+   width: 26px;
+   height: 3px;
+   border-radius: 3px;
+   background: #365fa1;
+   transform: translateY(5px);
+   transition: 1s;
+}
+
+.side_nav.active .toggle::before {
+   transform: translateY(0px) rotate(-405deg);
+}
+
+.side_nav.active .toggle::after {
+   transform: translateY(0px) rotate(225deg);
+}
+
+.side_nav ul {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   padding-left: 0rem;
+}
+
+.side_nav ul li {
+   position: relative;
+   list-style: none;
+   width: 100%;
+   border-top-left-radius: 30px;
+   border-bottom-left-radius: 30px;
+}
+
+.side_nav ul li:hover{
+   background: #fff;
+   color: #222;
+}
+
+.side_nav ul li:nth-child(1) {
+   top: 20px;
+   margin-bottom: 40px;
+   background: none;
+}
+
+.side_nav ul li:not(:first-child):hover::before{
+   content: '';
+   position: absolute;
+   top: -20px;
+   right: 0;
+   width: 20px;
+   height: 20px;
+   background: transparent;
+   border-bottom-right-radius: 20px;
+   box-shadow: 7.5px 7.5px 0 7.5px #fff;
+}
+
+.side_nav ul li:not(:first-child):hover::after{
+   content: '';
+   position: absolute;
+   bottom: -20px;
+   right: 0;
+   width: 20px;
+   height: 20px;
+   background: transparent;
+   border-top-right-radius: 20px;
+   box-shadow: 7.5px -7.5px 0 7.5px #fff;
+}
+
+.side_nav ul li a {
+   position: relative;
+   display: block;
+   width: 100%;
+   display: flex;
+   text-decoration: none;
+   color: #fff;
+}
+
+.side_nav ul li:hover:not(:first-child) a {
+color: #365fa1;
+}
+
+.side_nav ul li a .icon{
+   position: relative;
+   display: block;
+   min-width: 60px;
+   height: 60px;
+   line-height: 70px;
+   text-align: center;
+}
+
+.side_nav ul li a .icon ion-icon{
+   font-size: 1.75em;
+}
+
+.side_nav ul li a .title{
+   position: relative;
+   display: block;
+   padding: 0 10px;
+   height: 60px;
+   line-height: 60px;
+   text-align: start;
+   white-space: nowrap;
+}
+/* side navigation */
+
+#main_content{
+	margin-left: 120px;
+	transition: 1s;
+}
+
+    
