--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -12,6 +12,7 @@ body {
 	align-items: center;
 	background: var(--bg_color) !important;
 	line-height: 1.3 !important;
+	padding-right: 0 !important;
 }
 
 p{
@@ -120,6 +121,7 @@ p{
 	vertical-align: middle;
 	font-size: 14px;
 	font-weight: bold;
+	display: none;
 }
 
 .memo_div{
@@ -135,8 +137,14 @@ p{
     box-shadow: 5px 5px 10px 2px rgb(0 0 0 / 20%);
 }
 
-.memo_restore, .memo_hide, .memo_fav{
+.memo_hide, .memo_fav{
 	font-size : 0.8rem !important;
+	margin-top: 0.3rem;
+    margin-right: 0.4rem;
+}
+
+.memo_restore{
+	font-size : 1rem !important;
 	margin-top: 0.3rem;
     margin-right: 0.4rem;
 }
@@ -210,12 +218,12 @@ p{
 }
 
 .checkbox input:checked+label:after {
-    left: 40px;
+    left: 50px;
 }
 
 .checkbox label {
     width: 90px;
-    height: 42px;
+    height: 30px;
     background: #ccc;
     position: relative;
     display: inline-block;
@@ -265,12 +273,13 @@ p{
     width: 80px;
     background: #EAEAEA;
     box-shadow: 0 0 1px 2px rgb(0 0 0 / 15%);
+    vertical-align: super;
 }
 
 .hide_section .checkbox label:after {
     top: 0;
-    width: 42px;
-    height: 42px;
+    width: 30px;
+    height: 30px;
 }
 
 .navigation {
@@ -576,4 +585,8 @@ color: #365fa1;
 	transition: 1s;
 }
 
+/* 아이콘 타이틀 제거 */
+ion-icon {
+ pointer-events: none;
+}
     
