--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -11,9 +11,10 @@
 body {
 	justify-content: center;
 	align-items: center;
-	background: var(--bg_color) !important;
+	background: var(--bg_color);
 	line-height: 1.3 !important;
 	padding-right: 0 !important;
+	transition: 0.5s;
 }
 
 p{
@@ -774,5 +775,34 @@ ion-icon {
   	height: 6px;
   	background: var(--blue_color);
   	border-radius: 10px;
+}
+
+/* color_mode */
+.color_mode{
+   position: fixed;
+   right: 15px;
+   padding: 5px;
+   background: #fff;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: row;
+   border-radius: 20px;
+}
+
+.color_mode span{
+	position: relative;
+   	width: 16px;
+   	height: 16px;
+   	background: var(--clr);
+   	margin: 10px;
+   	border-radius: 50%;
+   	cursor: pointer;
+}
+
+.color_mode span.active{
+   border: 2px solid #333;
+   scale: 1.5;
+   transition: 0.5s;
 }
 
