--- a/Color_Memos/src/main/webapp/resources/css/mainPage.css
+++ b/Color_Memos/src/main/webapp/resources/css/mainPage.css
@@ -827,3 +827,17 @@ ion-icon {
     letter-spacing: 2px;
     font-weight: 500;
 }
+
+#color-picker{
+	border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 1px solid #ddd;
+    outline: 0;
+    width: 145px;
+}
+
+.sp-colorize-container{
+	border-top-left-radius: 10px !important;
+    border-bottom-left-radius: 10px !important;
+    border: 0 !important;
+}
